# snailplate

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
snailplate-parser/: Cargo.toml  DESIGN_DECISSION.md
snailplate-parser/src/: include_resolver.rs  lib.rs  parse_error.rs  span.rs  token.rs  tokenbody.rs  tokenbuf.rs  tokenizer.rs
snailplate-parser/src/include_resolver/: iterator.rs
snailplate-parser/src/token/: test.rs
snailplate-parser/src/tokenbody/: test.rs
snailplate-parser/src/tokenizer/: formatter.rs  ident.rs  iterator.rs  test.rs  test_ident.rs  test_instruction.rs  test_iterator.rs  test_span.rs
snailplate-parser/test/: include_resolver_test.rs  tokenizer_test.rs
snailplate-parser/test/common/: mod.rs
snailplate-parser/test/fixture/expected/: include_complete_defered.rs  include_contains_xxx_bad_whitespace.rs  include_contains_xxx_bad_whitespace_phantom.rs  include_contains_xxx_phantom.rs  x_newline_y.rs
snailplate-parser/test/fixture/template/: README.md  include_complete_defered.html  include_contains_xxx.html  include_contains_xxx_bad_whitespace.html  x_newline_y.html
